--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,21 @@
     <string name="app_name">MyGuard</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_alerts_enabled">Alerts are enabled</string>
+    <string name="title_alerts_disable">Disable alarms</string>
 
-    <!-- Strings related to Settings -->
+    <!-- Strings related to user input -->
     <string name="title_no_monitoring_enabled">No monitoring enabled!</string>
     <string name="description_no_monitoring_enabled">Must enable at least one monitoring type (Movement, Location)</string>
 
     <string name="title_no_alerts_enabled">No alerts enabled!</string>
     <string name="description_no_alerts_enabled">Must enable at least one alert (Sound, SMS, Call)</string>
+
+    <string name="title_location_unavailable">Failed to register location listener</string>
+    <string name="description_location_unavailable">Application is missing required rights</string>
+
+    <string name="title_location_manager_unavailable">Failed to register location listener</string>
+    <string name="description_location_manager_unavailable">Location manager is unavailable</string>
 
     <!-- Movement settings -->
     <string name="pref_header_movement">Movement</string>
