--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyGuard</string>
+    <string name="app_name">My Guard</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_alerts_enabled">Alerts are enabled</string>
@@ -19,13 +19,13 @@
     <string name="description_invalid_ringtone">Set an alarm tone in settings</string>
 
     <string name="title_location_rights_missing">Missing location rights!</string>
-    <string name="description_location_rights_missing">Location services disabled because of missing rights</string>
+    <string name="description_location_rights_missing">Location services are disabled because of missing rights</string>
 
     <string name="title_sms_rights_missing">Missing sms rights!</string>
-    <string name="description_sms_rights_missing">SMS services disabled because of missing rights</string>
+    <string name="description_sms_rights_missing">SMS services are disabled because of missing rights</string>
 
     <string name="title_call_rights_missing">Missing call rights!</string>
-    <string name="description_call_rights_missing">Call services disabled because of missing rights</string>
+    <string name="description_call_rights_missing">Call services are disabled because of missing rights</string>
 
     <string name="title_location_unavailable">Failed to register location listener</string>
     <string name="description_location_unavailable">Application is missing required rights</string>
