--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,13 +36,13 @@
     <string name="title_movement_sensitivity_invalid">Invalid sensitivity value!</string>
     <string name="description_movement_sensitivity_invalid">Restoring previous value</string>
 
-    <string name="title_location_interval_invalid">Invalid sensitivity value!</string>
+    <string name="title_location_interval_invalid">Invalid interval value!</string>
     <string name="description_location_interval_invalid">Restoring previous value</string>
 
-    <string name="title_location_distance_invalid">Invalid sensitivity value!</string>
+    <string name="title_location_distance_invalid">Invalid distance value!</string>
     <string name="description_location_distance_invalid">Restoring previous value</string>
 
-    <string name="title_alert_number_invalid">Invalid sensitivity value!</string>
+    <string name="title_alert_number_invalid">Invalid phone number value!</string>
     <string name="description_alert_number_invalid">Restoring previous value</string>
 
     <string name="title_sound_alert_alarm_invalid">Ringtone lookup error!</string>
