--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
 
     <string name="title_invalid_phone_number">Phone number is invalid</string>
     <string name="description_invalid_phone_number">Set a valid phone number in settings</string>
+    <string name="description_location_via_sms_invalid_phone_number">Location via SMS is enabled, but no phone number is set</string>
+    <string name="description_manage_via_sms_invalid_phone_number">Manage via SMS is enabled, but no phone number is set</string>
 
     <string name="title_invalid_ringtone">No alarm tone selected</string>
     <string name="description_invalid_ringtone">Set an alarm tone in settings</string>
@@ -47,6 +49,10 @@
 
     <string name="title_sound_alert_alarm_invalid">Ringtone lookup error!</string>
     <string name="description_sound_alert_alarm_invalid">Restoring previous value</string>
+
+    <string name="battery_low">Battery level of the phone is low</string>
+
+    <string name="movement_sensitivity_validation_error">Movement sensitivity must be between 0 – 100</string>
 
     <!-- Movement settings -->
     <string name="pref_header_movement">Movement</string>
